--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -8,8 +8,8 @@ html {
 
 hr {
     border-radius: 5px;
-    border: 2px dashed white;
-    width: 75%;
+    border: 2px dashed coral;
+    margin: 1em 10rem 1em 10rem;
 }
 
 html,
@@ -22,8 +22,7 @@ body {
     font-family: 'Comfortaa', sans-serif;
     font-size: 18px;
     color: black;
-    background: linear-gradient(-230deg, #ecf0f1, #26c6da);
-    background-size: 100% 100%;
+    background: #fafafa;
 }
 
 @media screen and (max-width: 900px) {
@@ -153,14 +152,14 @@ button {
     border: solid 2px rgb(236, 240, 241);
     border-radius: 10px;
     font-size: 20px;
-    transition: all .25s linear 0s;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, .4);
     padding: .2em;
+    transition: all .25s linear 0s;
+    /*   box-shadow: 0px 0px 0px rgba(0, 0, 0, .4); */
 }
 
 button:hover {
     border: solid 2px #2c3e50;
-    box-shadow: 4px 4px 6px #2c3e50;
+    /*   box-shadow: 0px 0px 2px #2c3e50; */
     cursor: pointer;
     transform: translateY(-2px);
 }
@@ -171,35 +170,6 @@ button:hover {
 button {
     position: relative;
     overflow: hidden;
-}
-
-button:after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 5px;
-    height: 5px;
-    background: rgba(255, 255, 255, .5);
-    opacity: 0;
-    border-radius: 50%;
-    transform: scale(1, 1) translate(-70%);
-    transform-origin: 50% 50%;
-}
-
-@keyframes ripple {
-    0% {
-        transform: scale(0, 0);
-        opacity: 1;
-    }
-    20% {
-        transform: scale(25, 25);
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
-        transform: scale(40, 40);
-    }
 }
 
 button:focus:not(:active)::after {
